edits nb2+ typos

--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, NoPlaceNoRouteConfig, ProcessingConfig, PrintDefaultConfig, PrintNoPlaceNoRouteConfig\n",
     "from pennylane_calculquebec.processing.interfaces import PreProcStep, PostProcStep\n",
-    "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation, MatrixReadoutMitigation\n",
+    "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation, MatrixReadoutMitigation, PrintResults\n",
     "\n",
     "    \n",
     "my_config = PrintDefaultConfig(False) # config par défaut avec affichage des qubits et étapes de transpilation (placement et routage, decomposition des portes et optimisation du circuit)\n",
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On a donc pu constaté que les ordinateurs actuels dans l'ère NISQ font des erreurs. Ces dernières proviennent principalement d'imperfections matérielles que ce soit au niveau de l'application des portes, d'erreur de lecture, ou de décohérence des qubits. La mitigation d'erreur consiste donc à réduire l'impact de ces erreurs dans nos calculs quantiques.\n"
+    "On a donc pu constater que les ordinateurs actuels dans l'ère NISQ font des erreurs. Ces dernières proviennent principalement d'imperfections matérielles que ce soit au niveau de l'application des portes, d'erreur de lecture, ou de décohérence des qubits. La mitigation d'erreur consiste donc à réduire l'impact de ces erreurs dans nos calculs quantiques.\n"
    ]
   },
   {
@@ -242,8 +242,16 @@
    "outputs": [],
    "source": [
     "my_config.steps.append(MatrixReadoutMitigation())\n",
-    "my_config.steps.append(IBUReadoutMitigation())\n",
-    "\n",
+    "my_config.steps.append(PrintResults())\n",
+    "my_config.steps.append(IBUReadoutMitigation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@qml.qnode(dev)\n",
     "def ghz_mitigated():\n",
     "    ghz()\n",
