--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -536,9 +536,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "NENV",
    "language": "python",
-   "name": "python3"
+   "name": "nenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -550,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
