--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -69,9 +69,9 @@
     "\\end{equation}\n",
     "où $\\alpha$ et $\\beta$ sont des nombres complexes satisfaisant $|\\alpha|^2 + |\\beta|^2 = 1$ (pour assurer la normalisation).  \n",
     "\n",
-    "Le **bra** correspondand à $\\vert \\psi \\rangle$ est:  \n",
+    "Le **bra** correspondant à $\\vert \\psi \\rangle$ est:  \n",
     "\\begin{equation}\n",
-    "\\langle \\psi \\vert = \\begin{pmatrix} \\alpha^* & \\beta^* \\end{pmatrix}.\n",
+    "\\langle \\psi \\vert = \\alpha^*   \\langle0 \\vert + \\beta^* \\langle1 \\vert \n",
     "\\end{equation}\n",
     "\n",
     "Ici, $\\alpha^*$ et $\\beta^*$ représentent les [conjugués complexes](https://en.wikipedia.org/wiki/Complex_conjugate) de $\\alpha$ et $\\beta$, respectivement. Cette combinaison linéaire permet au qubit d'exister en **superposition** des états $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$, ce qui signifie qu'il peut représenter simultanément les deux états avec des probabilités déterminées par $\\vert \\alpha|^2$ et $\\vert \\beta|^2$. **Bien que les qubits soient dans une combinaison linéaire d'états, lors de la mesure du qubit, par exemple à la fin d'un algorithme, il ne sera seulement mesuré dans l'état $\\vert 0 \\rangle$ ou $\\vert 1 \\rangle$.**\n",
