--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -125,8 +125,7 @@
     "beta_test = np.sqrt(3)/2 * 1j\n",
     "\n",
     "psi = qubit_state(alpha_test, beta_test)\n",
-    "print(\"État |ψ⟩ :\", psi)\n",
-    "print(\"État bra ⟨ψ| :\", np.conj(psi))\n"
+    "print(\"État |ψ⟩ :\", psi)\n"
    ]
   },
   {
