--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "---\n",
     "\n",
-    "Complétez la fonction `is_normalized(state)` pour vérifier qu'un état arbitraire est normalisé, soit que $|\\alpha|^2 + |\\beta|^2 = 1$"
+    "Complétez la fonction `is_normalized(state)` pour vérifier qu'un état arbitraire est normalisé, soit que $|\\alpha|^2 + |\\beta|^2 = 1$. Le module au carré est défini comme suit $|\\alpha|^2  = \\alpha\\alpha^*$ et $|\\beta|^2  = \\beta\\beta^*$ où $*$ représente le conjugué complexe. Indice : Utilisez la fonction `np.conj()`."
    ]
   },
   {
