--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCICE 2\n",
+    "EXERCICE 2 (Optionnel)\n",
     "\n",
     "---\n",
     "\n",
