--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -231,7 +231,12 @@
     "1 & 1 \\\\ \n",
     "1 & -1 \n",
     "\\end{pmatrix}\n",
-    "\\end{equation} "
+    "\\end{equation} \n",
+    "\n",
+    "En d'autre mots,\n",
+    "\\begin{equation}\n",
+    "H\\vert 0 \\rangle = ?\n",
+    "\\end{equation}"
    ]
   },
   {
