--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -340,7 +340,7 @@
     "P(\\vert 1 \\rangle) = \\vert \\beta \\vert ^2 = \\beta^* \\beta\n",
     "\\end{equation}\n",
     "\n",
-    "Rappelons que $\\alpha$ et $\\beta$ sont des nombres complexes satisfaisant $\\alpha|^2 + |\\beta|^2 = 1$. En d'autres termes, la probabilité totale est de 1, $P(\\vert 0 \\rangle) + P(\\vert 1 \\rangle) = 1$."
+    "Rappelons que $\\alpha$ et $\\beta$ sont des nombres complexes satisfaisant $|\\alpha|^2 + |\\beta|^2 = 1$. En d'autres termes, la probabilité totale est de 1, $P(\\vert 0 \\rangle) + P(\\vert 1 \\rangle) = 1$."
    ]
   },
   {
