--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -357,7 +357,8 @@
     "\\vert \\psi \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle).\n",
     "\\end{equation}\n",
     "\n",
-    "Complétez la fonction `measurement_probabilities(state)` pour calculer les probabilités de mesurer $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$.  \n"
+    "Complétez la fonction `measurement_probabilities(state)` pour calculer les probabilités de mesurer $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$.  \n",
+    "Indice : Utilisez la fonction `np.conj()`."
    ]
   },
   {
