--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -133,6 +133,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from print_latex import print_state_vector\n",
+    "state = quantum_function()\n",
+    "print_state_vector(state)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
