Edits selon les commentaires

--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,39 +407,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\vert\\psi_- \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 00 \\rangle - \\vert 11 \\rangle)$$\n",
-    "$$\\vert\\phi_+ \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 01 \\rangle + \\vert 10 \\rangle)$$\n",
-    "$$\\vert\\phi_- \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 01\\rangle - \\vert 10 \\rangle)$$"
+    "a)\n",
+    "$$\\vert\\phi_- \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 00 \\rangle - \\vert 11 \\rangle)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "##################\n",
     "# YOUR CODE HERE #\n",
     "##################\n",
-    "def psi_moins():\n",
+    "def phi_moins():\n",
+    "    ##################\n",
+    "    # YOUR CODE HERE #\n",
+    "    ##################\n",
+    "    return qml.state()\n",
+    "\n",
+    "#modify with function to view resulting state\n",
+    "#print_state_vector(phi_moins())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b)\n",
+    "$$\\vert\\psi_+ \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 01 \\rangle + \\vert 10 \\rangle)$$\n",
+    "$$\\vert\\psi_- \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 01\\rangle - \\vert 10 \\rangle)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#YOUR CODE HERE\n",
+    "def psi_plus():\n",
     "    ##################\n",
     "    # YOUR CODE HERE #\n",
     "    ##################\n",
     "    return qml.state()\n",
     "\n",
     "#YOUR CODE HERE\n",
-    "def phi_plus():\n",
-    "  ##################\n",
-    "  # YOUR CODE HERE #\n",
-    "  ##################\n",
-    "  return qml.state()\n",
-    "\n",
-    "#YOUR CODE HERE\n",
-    "def phi_moins():\n",
-    "  ##################\n",
-    "  # YOUR CODE HERE #\n",
-    "  ##################\n",
-    "  return qml.state()\n",
+    "def psi_moins():\n",
+    "    ##################\n",
+    "    # YOUR CODE HERE #\n",
+    "    ##################\n",
+    "    return qml.state()\n",
     "\n",
     "#modify with function to view resulting state\n",
     "#print_state_vector(phi_plus())"
@@ -512,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,9 +736,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [1 1]\n",
+      " [0 0]\n",
+      " [1 1]\n",
+      " [1 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "dev = qml.device('default.qubit', wires = 2, shots = 10)\n",
     "@qml.qnode(dev)\n",
@@ -747,11 +782,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'00': tensor(495, requires_grad=True), '11': tensor(505, requires_grad=True)}\n"
+     ]
+    }
+   ],
    "source": [
-    "dev = qml.device('default.qubit', wires = 2, shots = 10)\n",
+    "dev = qml.device('default.qubit', wires = 2, shots = 1000)\n",
     "@qml.qnode(dev)\n",
     "def bell_counts():\n",
     "    bell()\n",
