NB 1 English exercises
Make sure EN and FR match for nb 1

--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous maîtrisons maintenant les qubits et leur capacité à exister dans des **superpositions** de $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$ et nous pouvons représenter leurs états visuellement sur la **sphère de Bloch**. Mais que pouvons-nous faire exactement avec ces qubits ?  \n",
+    "Nous maîtrisons maintenant les qubits et leur capacité à exister dans des **superpositions** de $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$ et nous pouvons représenter leurs états visuellement sur la **sphère de Bloch**. Mais que pouvons-nous faire exactement avec ces qubits?  \n",
     "\n",
     "L'un des outils les plus importants de l'informatique quantique est la possibilité d'appliquer des **opérations** sur les qubits. Ces opérations sont représentées par des **matrices** qui modifient l'état des qubits, les déplaçant ainsi dans la sphère de Bloch.  \n",
     "\n",
@@ -246,7 +246,7 @@
     "EXERCICE #3\n",
     "\n",
     "---\n",
-    "Complétez la fonction `apply_gate(state, gate)` en appliquant la matrice H à un qubit dans un état arbitraire. Vous pouvez utiliser [`np.dot()`](https://numpy.org/doc/2.1/reference/generated/numpy.dot.html) pour effectuer le produit scalaire entre deux vecteurs."
+    "Complétez la fonction `apply_H(state, H)` en appliquant la matrice H à un qubit dans un état arbitraire. Vous pouvez utiliser [`np.dot()`](https://numpy.org/doc/2.1/reference/generated/numpy.dot.html) pour effectuer le produit scalaire entre deux vecteurs."
    ]
   },
   {
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cette nature probabiliste est une caractéristique fondamentale de l'informatique quantique. Contrairement à l'informatique classique, où les calculs sont déterministes, les mesures quantiques produisent des résultats en fonction de la **distribution de probabilités** encodée dans l'état quantique. Cela signifie que l'exécution d'un même calcul quantique plusieurs fois peut produire des résultats différents, en fonction des probabilités associées à l'état.\n",
+    "Cette nature probabiliste de la mesure est une caractéristique fondamentale de l'informatique quantique. Contrairement à l'informatique classique, où les calculs sont déterministes, les mesures quantiques produisent des résultats en fonction de la **distribution de probabilités** encodée dans l'état quantique. Cela signifie que l'exécution d'un même calcul quantique plusieurs fois peut produire des résultats différents, en fonction des probabilités associées à l'état.\n",
     "\n",
     "Pour simuler ce comportement, nous devons générer des échantillons à partir de la distribution de probabilité de l'état quantique. Ce processus probabiliste est la dernière étape nécessaire à la construction d'un simple simulateur quantique! Mettons cette idée en pratique en simulant des mesures à partir d'un état quantique donné.  "
    ]
