--- a/Français/Solutionnaire.ipynb
+++ b/Français/Solutionnaire.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +214,26 @@
     "def prepare_with_StatePrep(state):\n",
     "  qml.StatePrep(state=state, wires=0)\n",
     "  return qml.state()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.8660254+0.j , 0.       -0.5j], requires_grad=True)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare_with_gate()"
    ]
   },
   {
@@ -308,8 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "     "
+    "def circuit\n"
    ]
   }
  ],
