--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -6,7 +6,7 @@
     "id": "pGE3xmiMpDv7"
    },
    "source": [
-    "# 0. Introduction\n",
+    "#### 0. Introduction\n",
     "\n",
     "La nature fonctionne selon les principes de la **mécanique quantique**, et son cadre mathématique est fondé sur l'**algèbre linéaire**. Dans ce chapitre, nous allons nous plonger dans les concepts de base de l'information quantique en construisant un simulateur quantique d'un qubit entièrement basé sur des concepts simples d'algèbre linéaire.\n",
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,9 @@
     "\\end{equation}\n",
     "où $\\alpha$ et $\\beta$ sont des nombres complexes satisfaisant $|\\alpha|^2 + |\\beta|^2 = 1$ (pour assurer la normalisation).  \n",
     "\n",
-    "Le **bra** correspondant à $\\vert \\psi \\rangle$ est:  \n",
+    "Le **bra** correspondant à $\\vert \\psi \\rangle$ est\n",
     "\\begin{equation}\n",
-    "\\langle \\psi \\vert = \\alpha^*   \\langle0 \\vert + \\beta^* \\langle1 \\vert \n",
+    "\\langle \\psi \\vert = \\alpha^*   \\langle0 \\vert + \\beta^* \\langle1 \\vert. \n",
     "\\end{equation}\n",
     "\n",
     "Ici, $\\alpha^*$ et $\\beta^*$ représentent les [conjugués complexes](https://en.wikipedia.org/wiki/Complex_conjugate) de $\\alpha$ et $\\beta$, respectivement. Cette combinaison linéaire permet au qubit d'exister en **superposition** des états $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$, ce qui signifie qu'il peut représenter simultanément les deux états avec des probabilités déterminées par $\\vert \\alpha|^2$ et $\\vert \\beta|^2$. **Bien que les qubits soient dans une combinaison linéaire d'états, lors de la mesure du qubit, par exemple à la fin d'un algorithme, il ne sera seulement mesuré dans l'état $\\vert 0 \\rangle$ ou $\\vert 1 \\rangle$.**\n",
@@ -118,14 +118,21 @@
     "    psi = # Complétez cette ligne \n",
     "\n",
     "    # Retourner l'état \n",
-    "    return psi\n",
-    "\n",
+    "    return psi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Tester avec alpha = 1/2 et beta = sqrt(3)/2 * i\n",
     "alpha_test = 1/2.0\n",
     "beta_test = np.sqrt(3)/2 * 1j\n",
     "\n",
     "psi = qubit_state(alpha_test, beta_test)\n",
-    "print(\"État |ψ⟩ :\", psi)\n"
+    "print(\"État |ψ⟩ :\", psi)"
    ]
   },
   {
@@ -155,8 +162,15 @@
     "        Bool: True si le vecteur est normalisé, faux autrement.  \n",
     "    \"\"\"  \n",
     "    norm = # Complétez cette ligne  \n",
-    "    return np.isclose(norm, 1)  \n",
-    "\n",
+    "    return np.isclose(norm, 1)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Test de la fonction  \n",
     "alpha = 1/2  \n",
     "beta = np.sqrt(3)/2 * 1j  \n",
@@ -164,7 +178,7 @@
     "is_normalized = is_normalized(psi)\n",
     "\n",
     "print(\"État quantique :\", psi)  \n",
-    "print(\"Normalisé :\", is_normalized)  "
+    "print(\"Normalisé :\", is_normalized) "
    ]
   },
   {
@@ -172,7 +186,7 @@
    "metadata": {},
    "source": [
     "### Sphère de Bloch\n",
-    "Pour visualiser géométriquement les états d'un qubit, nous utilisons la **sphère de Bloch**. Tout état (pur) peut être représenté comme un point sur la surface de la sphère, défini par deux angles :\n",
+    "Pour visualiser géométriquement les états d'un qubit, nous utilisons la **sphère de Bloch**. Tout état (pur) peut être représenté comme un point sur la surface de la sphère, défini par deux angles.\n",
     "\n",
     "$\\theta$ : Spécifie l'angle entre l'état et l'axe $\\vert{0} \\rangle$.\n",
     "\n",
@@ -220,23 +234,7 @@
    "source": [
     "Nous maîtrisons maintenant les qubits et leur capacité à exister dans des **superpositions** de $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$ et nous pouvons représenter leurs états visuellement sur la **sphère de Bloch**. Mais que pouvons-nous faire exactement avec ces qubits?  \n",
     "\n",
-    "L'un des outils les plus importants de l'informatique quantique est la possibilité d'appliquer des **opérations** sur les qubits. Ces opérations sont représentées par des **matrices** qui modifient l'état des qubits, les déplaçant ainsi dans la sphère de Bloch.  \n",
-    "\n",
-    "Commençons par un état très simple, $\\vert \\psi \\rangle = \\vert 0 \\rangle$. Initialement, cet état n'est **pas une superposition** et pointe directement vers le haut de la sphère de Bloch.  \n",
-    "\n",
-    "Maintenant, que se passe-t-il si nous appliquons la matrice suivante à l'état de notre qubit ?  \n",
-    "\n",
-    "\\begin{equation}\n",
-    "H = \\frac{1}{\\sqrt{2}} \\begin{pmatrix} \n",
-    "1 & 1 \\\\ \n",
-    "1 & -1 \n",
-    "\\end{pmatrix}\n",
-    "\\end{equation} \n",
-    "\n",
-    "En d'autre mots,\n",
-    "\\begin{equation}\n",
-    "H\\vert 0 \\rangle = ?\n",
-    "\\end{equation}"
+    "L'un des outils les plus importants de l'informatique quantique est la possibilité d'appliquer des **opérations** sur les qubits. Ces opérations sont représentées par des **matrices** qui modifient l'état des qubits, les déplaçant ainsi dans la sphère de Bloch.  "
    ]
   },
   {
@@ -246,7 +244,45 @@
     "EXERCICE #3\n",
     "\n",
     "---\n",
-    "Complétez la fonction `apply_H(state, H)` en appliquant la matrice H à un qubit dans un état arbitraire. Vous pouvez utiliser [`np.dot()`](https://numpy.org/doc/2.1/reference/generated/numpy.dot.html) pour effectuer le produit scalaire entre deux vecteurs."
+    "Complétez la fonction `apply_U(state, U)` en appliquant une matrice unitaire $U$ à un qubit dans un état arbitraire. Vous pouvez utiliser [`np.dot()`](https://numpy.org/doc/2.1/reference/generated/numpy.dot.html) pour effectuer le produit scalaire entre deux vecteurs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_U(state, U):\n",
+    "    \"\"\"\n",
+    "    Applique une porte quantique (matrice unitaire) à un état de qubit donné.\n",
+    "    \n",
+    "    Args:\n",
+    "        state (np.array): État du qubit (vecteur de dimension 2)\n",
+    "        U (np.array): Matrice unitaire 2x2 \n",
+    "        \n",
+    "    Returns:\n",
+    "        np.array: Nouvel état du qubit après l'application de la matrice U \n",
+    "    \"\"\"\n",
+    "    # Appliquer la matrice U au qubit \n",
+    "    return # Complétez cette ligne "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous allons tester la fonction `apply_U(state, U)` avec une matrice unitaire particulièrement importante nommée la matrice de Hadamard\n",
+    "\n",
+    "\\begin{equation}\n",
+    "H = \\frac{1}{\\sqrt{2}} \\begin{pmatrix} \n",
+    "1 & 1 \\\\ \n",
+    "1 & -1 \n",
+    "\\end{pmatrix}\n",
+    "\\end{equation} \n",
+    "\n",
+    "\n",
+    "Nous allons appliquer la matrice $H$ à l'état $\\vert \\psi \\rangle = \\vert 0 \\rangle$. Initialement, cet état n'est **pas une superposition** et pointe directement vers le haut de la sphère de Bloch. Que se passe-t-il après application de la matrice $H$?"
    ]
   },
   {
@@ -255,27 +291,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_H(state, H):\n",
-    "    \"\"\"\n",
-    "    Applique une porte quantique (matrice unitaire) à un état de qubit donné.\n",
-    "    \n",
-    "    Args:\n",
-    "        state (np.array): État du qubit (vecteur de dimension 2)\n",
-    "        H (np.array): Matrice unitaire 2x2 représentant la porte Hadamard\n",
-    "        \n",
-    "    Returns:\n",
-    "        np.array: Nouvel état du qubit après l'application de la matrice H \n",
-    "    \"\"\"\n",
-    "    # Appliquer la matrice H à l'état du qubit et retourner le nouvel état\n",
-    "    return # Complétez cette ligne \n",
-    "    \n",
     "# Définir la matrice de Hadamard\n",
     "H = 1/np.sqrt(2) * np.array([[1, 1], [1, -1]])\n",
     "\n",
     "# Tester la fonction avec |0⟩ et H\n",
     "ket_0 = np.array([1, 0])\n",
-    "new_ket = apply_H(ket_0, H)\n",
-    "print(\"Nouvel état après application de H :\", new_ket)\n"
+    "new_ket = apply_U(ket_0, H)\n",
+    "print(\"Nouvel état après application de H :\", new_ket)"
    ]
   },
   {
@@ -305,13 +327,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Mathématiquement, voici l'opération que nous avons effectuée,\n",
     "\\begin{equation}\n",
     "H \\vert 0 \\rangle  = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} \n",
     "1 & 1\\\\\n",
     "1 & -1\n",
-    "\\end{pmatrix}\\begin{pmatrix} 1 \\\\0\\end{pmatrix} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\1\\end{pmatrix}  = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle)\n",
+    "\\end{pmatrix}\\begin{pmatrix} 1 \\\\0\\end{pmatrix} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\1\\end{pmatrix}  = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle).\n",
     "\\end{equation}\n",
     "\n",
+    "Graphiquement, on visualise le changement de l'état du qubit sur la sphère de Bloch.\n",
     "![Hadamard.png](attachment:5a81a3bc-c9db-4798-96fd-1913bc1fb8a9.png)\n",
     "\n",
     "Nous avons créé un état de superposition en appliquant une matrice judicieusement sélectionnée à l'état initial de notre qubit. Il s'agit d'une matrice spéciale en informatique quantique appelée **opération de Hadamard**. Nous en parlerons plus en détail dans le prochain chapitre. \n",
@@ -325,7 +349,7 @@
    "source": [
     "### Amplitudes de probabilité\n",
     "\n",
-    "Considérons la superposition générale,\n",
+    "Considérons une superposition générale,\n",
     "\\begin{equation}\n",
     "\\vert \\psi \\rangle = \\alpha \\vert 0 \\rangle + \\beta \\vert 1 \\rangle.\n",
     "\\end{equation}\n",
@@ -350,14 +374,7 @@
     "EXERCICE #4\n",
     "\n",
     "---\n",
-    "\n",
-    "Considérez l'état de superposition créé dans le dernier exercice, \n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\vert \\psi \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle).\n",
-    "\\end{equation}\n",
-    "\n",
-    "Complétez la fonction `measurement_probabilities(state)` pour calculer les probabilités de mesurer $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$.  \n",
+    "Complétez la fonction `measurement_probabilities(state)` pour calculer les probabilités de mesurer $\\vert 0 \\rangle$ et $\\vert 1 \\rangle$ pour un état $\\vert \\psi \\rangle$ arbitraire.  \n",
     "Indice : Utilisez la fonction `np.conj()`."
    ]
   },
@@ -378,8 +395,26 @@
     "    \"\"\"  \n",
     "    P0 = # Complétez cette ligne \n",
     "    P1 = # Complétez cette ligne \n",
-    "    return P0, P1  \n",
+    "    return P0, P1  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testons la fonction `measurement_probabilities(state)` avec l'état de superposition créé dans le dernier exercice, \n",
     "\n",
+    "\\begin{equation}\n",
+    "\\vert \\psi \\rangle = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle).\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Définition de l’état de superposition  \n",
     "psi = (1 / np.sqrt(2)) * np.array([1, 1])  \n",
     "\n",
