Minor edits prereqs

--- a/English/0_Prerequis.ipynb
+++ b/English/0_Prerequis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8446bf0b-9bb9-45a1-b559-5f7a7a5b3525",
    "metadata": {},
    "outputs": [],
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d98f697b-1954-401d-b67d-0e92ba81f16a",
-   "metadata": {},
-   "source": [
-    "Dans NumPy, les vecteurs et les matrices sont représentés à l’aide d’objets appelés tableaux (`array`). NumPy propose de nombreuses fonctions utiles pour créer, manipuler et transformer ces objets. Vous pouvez consulter la __[documentation officielle de NumPy](https://numpy.org/doc/2.2/user/basics.html)__ pour en apprendre davantage sur ces fonctionnalités."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "66425314-2d3e-4982-8c0d-de9b60d1ac6a",
    "metadata": {},
    "source": [
     "## Algèbre linéaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "632e4ae3-2d1a-4c51-8947-9e4a0f32c013",
+   "metadata": {},
+   "source": [
+    "Dans NumPy, les vecteurs et les matrices sont représentés à l’aide d’objets appelés tableaux (`array`). NumPy propose de nombreuses fonctions utiles pour créer, manipuler et transformer ces objets. Vous pouvez consulter la __[documentation officielle de NumPy](https://numpy.org/doc/2.2/user/basics.html)__ pour en apprendre davantage sur ces fonctionnalités."
    ]
   },
   {
@@ -141,22 +141,22 @@
    "source": [
     "Une autre opération importante en algèbre linéaire est la **transposée d'une matrice**. Elle est obtenue en échangeant les lignes et les colonnes d'une matrice.\n",
     "\n",
-    "Soit la matrice $A$ :\n",
+    "Soit la matrice $A$ \n",
     "\n",
     "$$\n",
     "A = \\begin{bmatrix}\n",
     "a_{11} & a_{12} \\\\\n",
     "a_{21} & a_{22}\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}.\n",
     "$$\n",
     "\n",
-    "Sa transposée, notée $A^T$, est :\n",
+    "Sa transposée, notée $A^T$, est \n",
     "\n",
     "$$\n",
     "A^T = \\begin{bmatrix}\n",
     "a_{11} & a_{21} \\\\\n",
     "a_{12} & a_{22}\n",
-    "\\end{bmatrix}\n",
+    "\\end{bmatrix}.\n",
     "$$"
    ]
   },
